[package]
name = "gallerist"
version = "0.1.0"
authors = ["amancern3 <amandeep842.as@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serenity = {default-features = false, features=["client", "gateway", "model", "rustls_backend"], version = "0.10.4"}
tokio = {version = "1.0", features=["full"]}
reqwest = "0.11.2"
scraper = "0.12.0"
image = "0.23.14"
tempfile = "3.2.0"
